media-tools/tautulli/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: media-tools
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  serviceName: tautulli
  replicas: 1
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
        name: tautulli
    spec:
      restartPolicy: Always
      automountServiceAccountToken: false
      priorityClassName: medium-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
              - key: kubernetes.io/arch
                operator: In
                values: 
                - 'amd64'
      containers:
      - name: tautulli
        image: tautulli/tautulli:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
            add:
            - "CHOWN"
            - "SETGID"
            - "SETUID"
            - "DAC_OVERRIDE"
        resources:
          requests:
            cpu: 10m
            memory: 300Mi
          limits:
            cpu: 250m
            memory: 600Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8181
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
        volumeMounts:
        - name: tautulli
          mountPath: /config
      volumes:
        - name: tautulli
          persistentVolumeClaim:
            claimName: longhorn-tautulli-pvc
