media-tools/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tautulli-service
  name: tautulli-service
  namespace: media-tools
spec:
  type: ClusterIP
  ports:
  - port: 8181
    protocol: TCP
    targetPort: 8181
    name: web
  selector:
    app: tautulli
