media-tools/tautulli/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: media-tools
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "tautulli.ucdialplans.com"
  rules:
  - backendRefs:
    - name: tautulli-service
      namespace: media-tools
      kind: Service
      port: 8181
