media-tools/tautulli/ingress.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: tautulli
  namespace: media-tools
  annotations:
    external-dns.alpha.kubernetes.io/target: k3s.ucdialplans.com
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints: 
  - websecure
  routes:
  - match: Host(`tautulli.ucdialplans.com`) 
    kind: Rule
    services:
    - name: tautulli-service
      port: 8181
    middlewares:
    - name: traefik-security
      namespace: traefik
  tls:
    options:
      name: tls-options-clientauth
      namespace: traefik
