media-tools/tautulli/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tautulli
  namespace: media-tools
spec:
  endpointSelector:
    matchLabels:
      app: tautulli
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8181"
    - fromEndpoints:
        - matchLabels:
            app: cloudflare-tunnel
      toPorts:
        - ports:
            - port: "8181"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: plex
      toPorts:
        - ports:
            - port: "32400"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
